inserindo layout ao sistema de loja

--- a/semana1/sistema-loja/index.html
+++ b/semana1/sistema-loja/index.html
@@ -5,21 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Geromin</title>
+
+    <link rel="stylesheet" type="text/css" href="layout-site.css">
 </head>
 <body>
     <div>
-        <h1>Bem-vind@ à <em>Geromin</em>!</h1>
-        <p>Onde de tudo encontra, e é encontrado!</p>
+        <h1 class="logo">Bem-vind@ à <em>Geromin</em>!</h1>
+        <p class="refrao">Onde de tudo encontra, e é encontrado!</p>
     </div>
 
     <div>
-        <a href="#">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+        <a href="#" class="links">Página Inicial</a>
+        <a href="ctrl-estoque.html" class="links">Controle de Estoque</a>
+        <a href="add-produto.html" class="links">Adicionar Produto</a>
+        <a href="funcionarios.html" class="links">Funcionários</a>
     </div>
 
-    <div>
+    <div class="corpo">
         <p>
             Fundada em 2015, as lojas Geromin podem ser encontradas
             <br>
@@ -29,16 +31,15 @@
             <br>
             mercado! Venham nos visitar! 
         </p>
-        <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->>
     </div>
 
-    <div>
+    <div class=rodape>
         <p>Siga-nos nas redes sociais!</p>
 
         <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+            <img src="https://image.flaticon.com/icons/png/512/25/25305.png" class="fotos"/>
+            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" class="fotos"/>
+            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" class="fotos"/>
         </div>
     </div>
 </body>
