layout sistema de loja

--- a/semana1/sistema-loja/funcionarios.html
+++ b/semana1/sistema-loja/funcionarios.html
@@ -12,19 +12,18 @@
 </head>
 
 <body>
-    <div>
-        <h1 class="logo">Geromin</h1>
-    </div>
-
-    <div>
-        <a href="index.html" class="links">Página Inicial</a>
-        <a href="ctrl-estoque.html" class="links">Controle de Estoque</a>
-        <a href="add-produto.html" class="links">Adicionar Produto</a>
-        <a href="#" class="links">Funcionários</a>
+    <div class="cabecalho">
+        <h1>Geromin</h1>
+        <div class="bloco-links">
+            <a href="index.html" class="links">Página Inicial</a>
+            <a href="ctrl-estoque.html" class="links">Controle de Estoque</a>
+            <a href="add-produto.html" class="links">Adicionar Produto</a>
+            <a href="#" class="links">Funcionários</a>
+        </div>
     </div>
 
     <div class="corpo">
-        <h2>Funcionários</h2>
+        <h2 class="lista-corpo">Funcionários</h2>
         <ol class="lista">
             <li>Amanda Lara</li>
             <li>Carlos Amaro</li>
@@ -32,6 +31,16 @@
             <li>Tiago Verdana</li>
             <li>Walter Saramargo</li>
         </ol>
+    </div>
+
+    <div class=rodape>
+        <p>Siga-nos nas redes sociais!</p>
+
+        <div>
+            <img src="https://image.flaticon.com/icons/png/512/25/25305.png" class="fotos" />
+            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" class="fotos" />
+            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" class="fotos" />
+        </div>
     </div>
 
 </body>
