--- a/semana1/sistema-loja/index.html
+++ b/semana1/sistema-loja/index.html
@@ -9,20 +9,19 @@
     <link rel="stylesheet" type="text/css" href="layout-site.css">
 </head>
 <body>
-    <div>
+    <div class="cabecalho">
         <h1 class="logo">Bem-vind@ à <em>Geromin</em>!</h1>
         <p class="refrao">Onde de tudo encontra, e é encontrado!</p>
-    </div>
-
-    <div>
-        <a href="#" class="links">Página Inicial</a>
-        <a href="ctrl-estoque.html" class="links">Controle de Estoque</a>
-        <a href="add-produto.html" class="links">Adicionar Produto</a>
-        <a href="funcionarios.html" class="links">Funcionários</a>
+        <div class="bloco-links">
+            <a href="#" class="links">Página Inicial</a>
+            <a href="ctrl-estoque.html" class="links">Controle de Estoque</a>
+            <a href="add-produto.html" class="links">Adicionar Produto</a>
+            <a href="funcionarios.html" class="links">Funcionários</a>
+        </div>
     </div>
 
     <div class="corpo">
-        <p>
+        <p class="texto-corpo">
             Fundada em 2015, as lojas Geromin podem ser encontradas
             <br>
             em toda a cidade do Rio de Janeiro. Trazendo para você
