--- a/semana1/sistema-loja/ctrl-estoque.html
+++ b/semana1/sistema-loja/ctrl-estoque.html
@@ -12,19 +12,18 @@
 </head>
 
 <body>
-    <div>
-        <h1 class="logo">Geromin</h1>
-    </div>
-
-    <div>
-        <a href="index.html" class="links">Página Inicial</a>
-        <a href="#" class="links">Controle de Estoque</a>
-        <a href="add-produto.html" class="links">Adicionar Produto</a>
-        <a href="funcionarios.html" class="links">Funcionários</a>
+    <div class="cabecalho">
+        <h1>Geromin</h1>
+        <div>
+            <a href="index.html" class="links">Página Inicial</a>
+            <a href="#" class="links">Controle de Estoque</a>
+            <a href="add-produto.html" class="links">Adicionar Produto</a>
+            <a href="funcionarios.html" class="links">Funcionários</a>
+        </div>
     </div>
 
     <div class="corpo">
-        <h2>Controle de Estoque</h2>
+        <h2 id="topico-estoque">Controle de Estoque</h2>
 
         <table class="tabela">
             <tr>
@@ -70,6 +69,16 @@
             </tr>
 
         </table>
+    </div>
+
+    <div class=rodape>
+        <p>Siga-nos nas redes sociais!</p>
+
+        <div>
+            <img src="https://image.flaticon.com/icons/png/512/25/25305.png" class="fotos" />
+            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" class="fotos" />
+            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" class="fotos" />
+        </div>
     </div>
 
 </body>
