modificacao sistema de lojas e adicao de vendas

--- a/semana1/sistema-loja/ctrl-estoque.html
+++ b/semana1/sistema-loja/ctrl-estoque.html
@@ -12,18 +12,20 @@
 </head>
 
 <body>
-    <div class="cabecalho">
-        <h1>Geromin</h1>
-        <div>
+    <div class="header">
+        <h1 class="refrao">Geromin</h1>
+        <div class="indices">
             <a href="index.html" class="links">Página Inicial</a>
             <a href="#" class="links">Controle de Estoque</a>
             <a href="add-produto.html" class="links">Adicionar Produto</a>
             <a href="funcionarios.html" class="links">Funcionários</a>
+            <a href="vendas.html" class="links">Vendas</a>
+            <a href="hist-vendas.html" class="links">Histórico de Vendas</a>
         </div>
     </div>
 
     <div class="corpo">
-        <h2 id="topico-estoque">Controle de Estoque</h2>
+        <h2 class="descricao">Controle de Estoque</h2>
 
         <table class="tabela">
             <tr>
@@ -71,13 +73,13 @@
         </table>
     </div>
 
-    <div class=rodape>
+    <div class="footer">
         <p>Siga-nos nas redes sociais!</p>
 
         <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png" class="fotos" />
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" class="fotos" />
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" class="fotos" />
+            <img src="https://image.flaticon.com/icons/png/512/25/25305.png" class="fotos" alt="ícone do facebook" />
+            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" class="fotos" alt="ícone do instagram" />
+            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" class="fotos" alt="ícone do twitter" />
         </div>
     </div>
 
