--- a/semana1/sistema-loja/hist-vendas.html
+++ b/semana1/sistema-loja/hist-vendas.html
@@ -3,12 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Funcionários</title>
+    <title>Document</title>
 
     <link rel="stylesheet" type="text/css" href="layout-site.css">
-
 </head>
 
 <body>
@@ -18,21 +17,45 @@
             <a href="index.html" class="links">Página Inicial</a>
             <a href="ctrl-estoque.html" class="links">Controle de Estoque</a>
             <a href="add-produto.html" class="links">Adicionar Produto</a>
-            <a href="#" class="links">Funcionários</a>
+            <a href="funcionarios.html" class="links">Funcionários</a>
             <a href="vendas.html" class="links">Vendas</a>
-            <a href="hist-vendas.html" class="links">Histórico de Vendas</a>
+            <a href="#" class="links">Histórico de Vendas</a>
         </div>
     </div>
 
     <div class="corpo">
-        <h2 class="descricao">Funcionários</h2>
-        <ol class="lista">
-            <li>Amanda Lara</li>
-            <li>Carlos Amaro</li>
-            <li>Daniela Beatriz</li>
-            <li>Tiago Verdana</li>
-            <li>Walter Saramargo</li>
-        </ol>
+        <h2 class="descricao">Histórico de vendas</h2>
+
+        <table class="tabela">
+            <tr>
+                <th>Horário</th>
+                <th>Funcionário</th>
+                <th>Valor da Compra (R$)</th>
+                <th>Forma de pagamento</th>
+            </tr>
+
+            <tr>
+                <td>oito horas</td>
+                <td>Amanda Lara</td>
+                <td> R$ 35,00 </td>
+                <td> Cartão </td>
+            </tr>
+
+            <tr>
+                <td>nove horas</td>
+                <td>Daniela Beatriz</td>
+                <td> R$ 45,00 </td>
+                <td> Dinheiro </td>
+            </tr>
+
+            <tr>
+                <td>onze horas</td>
+                <td> Walter Saramargo </td>
+                <td> R$ 15,00 </td>
+                <td> Dinheiro </td>
+            </tr>
+        </table>
+
     </div>
 
     <div class="footer">
