--- a/semana1/sistema-loja/index.html
+++ b/semana1/sistema-loja/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +9,18 @@
 
     <link rel="stylesheet" type="text/css" href="layout-site.css">
 </head>
+
 <body>
-    <div class="cabecalho">
+    <div class="header">
         <h1 class="logo">Bem-vind@ à <em>Geromin</em>!</h1>
         <p class="refrao">Onde de tudo encontra, e é encontrado!</p>
-        <div class="bloco-links">
+        <div class="indices">
             <a href="#" class="links">Página Inicial</a>
             <a href="ctrl-estoque.html" class="links">Controle de Estoque</a>
             <a href="add-produto.html" class="links">Adicionar Produto</a>
             <a href="funcionarios.html" class="links">Funcionários</a>
+            <a href="vendas.html" class="links">Vendas</a>
+            <a href="hist-vendas.html" class="links">Histórico de Vendas</a>
         </div>
     </div>
 
@@ -28,18 +32,23 @@
             <br>
             utensílios básicos e escolares com os melhores preços do
             <br>
-            mercado! Venham nos visitar! 
+            mercado! Venham nos visitar!
         </p>
+
+        <div>
+            <a href="vendas.html" id="botao-compra">Clique para iniciar compra</a></button>
+        </div>
     </div>
 
-    <div class=rodape>
+    <div class="footer">
         <p>Siga-nos nas redes sociais!</p>
 
         <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png" class="fotos"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" class="fotos"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" class="fotos"/>
+            <img src="https://image.flaticon.com/icons/png/512/25/25305.png" class="fotos" alt="ícone do facebook" />
+            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" class="fotos" alt="ícone do instagram" />
+            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" class="fotos" alt="ícone do twitter" />
         </div>
     </div>
 </body>
+
 </html>
