--- a/semana1/sistema-loja/add-produto.html
+++ b/semana1/sistema-loja/add-produto.html
@@ -12,56 +12,55 @@
 </head>
 
 <body>
-    <div class="cabecalho">
-        <h1>Geromin</h1>
-        <div>
+    <div class="header">
+        <h1 class="refrao">Geromin</h1>
+        <div class="indices">
             <a href="index.html" class="links">Página Inicial</a>
             <a href="ctrl-estoque.html" class="links">Controle de Estoque</a>
             <a href="#" class="links">Adicionar Produto</a>
             <a href="funcionarios.html" class="links">Funcionários</a>
+            <a href="vendas.html" class="links">Vendas</a>
+            <a href="hist-vendas.html" class="links">Histórico de Vendas</a>
         </div>
     </div>
 
     <div class="corpo">
-        <div class="formulario">
-            <h2>Adicionar Produto</h2>
-            <form action="#">
-                <div>
-                    <label for="link-foto">Link para foto: </label>
-                    <input type="url" id="link-foto" name="link-foto">
-                </div>
+        <h2 class="descricao">Adicionar Produto</h2>
+        <form action="#" class="form">
+            <div>
+                <label for="link-foto">Link para foto: </label>
+                <input type="url" id="link-foto" name="link-foto">
+            </div>
 
-                <div>
-                    <label for="descricao">Descrição do produto: </label>
-                    <input type="text" id="descricao" name="descrição">
-                </div>
+            <div>
+                <label for="descricao">Descrição do produto: </label>
+                <input type="text" id="descricao" name="descrição">
+            </div>
 
-                <div>
-                    <label for="preco">Preço (em R$): </label>
-                    <input type="number" id="preco" name="preço">
-                </div>
+            <div>
+                <label for="preco">Preço (em R$): </label>
+                <input type="number" id="preco" name="preço">
+            </div>
 
-                <div>
-                    <label for="quantidade">Quantidade disponível: </label>
-                    <input type="number" id="quantidade" name="quantidade">
-                </div>
+            <div>
+                <label for="quantidade">Quantidade disponível: </label>
+                <input type="number" id="quantidade" name="quantidade">
+            </div>
 
-                <div>
-                    <button type="submit">Adicionar</button>
-                </div>
+            <div>
+                <button type="submit" class="botao-envio">Adicionar</button>
+            </div>
 
-            </form>
-        </div>
-
+        </form>
     </div>
 
-    <div class=rodape>
+    <div class="footer">
         <p>Siga-nos nas redes sociais!</p>
 
         <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png" class="fotos" />
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" class="fotos" />
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" class="fotos" />
+            <img src="https://image.flaticon.com/icons/png/512/25/25305.png" class="fotos" alt="ícone do facebook" />
+            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" class="fotos" alt="ícone do instagram" />
+            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" class="fotos" alt="ícone do twitter" />
         </div>
     </div>
 
