--- a/semana1/portfolio/contato.html
+++ b/semana1/portfolio/contato.html
@@ -8,13 +8,12 @@
 
     <link rel="stylesheet" href="styles.css">
 
-    <title>Contatos BS</title>
+    <title>Contatos Bruno Silva</title>
 </head>
 
-<body>
+<body id="corpo-contato">
     <header>
-        <img src="imgs/logo.png" alt="logo BS" class="logo"></img>
-        <h1>BRUNO SANTOS</h1>
+        <h1><strong><em>BRUNO SILVA <br> Estudante Dev FullStack</em><strong></strong></h1>
         <div class="menu">
             <a href="index.html" class="botao">Home</a>
         </div>
@@ -39,11 +38,12 @@
 
     <footer>
         <p>Venham se conectar!!</p>
-        <a href="https://br.linkedin.com"><img src="imgs/linkedin.png" alt="lnkedIn BS" target="_blank"
+        <a href="https://br.linkedin.com"><img src="imgs/linkedin-logo.png" alt="lnkedIn BS" class="redes-sociais"></img></a>
+        <a href="https://www.instagram.com"><img src="imgs/instagram-logo.jpg" alt="instagram BS"
                 class="redes-sociais"></img></a>
-        <a href="https://www.instagram.com"><img src="imgs/instagram.jpg" alt="instagram BS" target="_blank"
+        <a href="https://www.facebook.com"><img src="imgs/facebook-logo.png" alt="facebook BS"
                 class="redes-sociais"></img></a>
-        <a href="https://www.facebook.com"><img src="imgs/facebook.png" alt="facebook BS" target="_blank"
+        <a href="https://www.facebook.com"><img src="imgs/github-logo.png" alt="facebook BS"
                 class="redes-sociais"></img></a>
     </footer>
 
