--- a/semana1/portfolio/index.html
+++ b/semana1/portfolio/index.html
@@ -8,13 +8,12 @@
 
     <link rel="stylesheet" href="styles.css">
 
-    <title>Portfolio BS</title>
+    <title>Portfolio Bruno Silva</title>
 </head>
 
 <body>
     <header>
-        <img src="imgs/logo.png" alt="logo BS" class="logo"></img>
-        <h1><strong>BRUNO SANTOS</strong></h1>
+        <h1><strong><em>BRUNO SILVA <br> Estudante Dev FullStack</em><strong></strong></h1>
         <div class="menu">
             <a href="#secao1" class="botao">Formações</a>
             <a href="#secao2" class="botao">Projetos</a>
@@ -26,78 +25,113 @@
 
     <main>
         <section>
-            <h2>Estudante Dev FullStack</h2>
             <img src="imgs/foto.jpg" alt="Minha foto" id="foto-perfil"></img>
-            <h3>Olá, seja bem-vindo à minha página! Meu nome é Bruno.</h3><br>
-            <p id="descricao">Sou estudante no curso de Dev FullStack da Labenu, onde procuro ampliar
-                meus conhecimentos e me tornar um profissional da área de TI.
-                Sou alguém de muita dedicação, e adoro a possibilidade de colaborar na melhoria do mundo.
-            </p>
+            <h2>Olá, seja bem-vindo à minha página! Meu nome é Bruno.</h3><br>
+                <p id="descricao">Sou estudante no curso de Dev FullStack da Labenu, onde procuro ampliar
+                    meus conhecimentos e me tornar um profissional da área de TI.
+                    Sou alguém de muita dedicação, e adoro a possibilidade de colaborar na melhoria do mundo.
+                </p>
         </section>
 
         <section id="secao1">
-            <p><br>Minhas Formações</p>
+            <p><br>MINHAS FORMAÇÕES</p>
             <div class="bloco-lateral1">
-                <p>Instituições de ensino</p><br>
+                <p>INSTITUIÇÕES DE ENSINO</p><br>
+                <div>
+                    <img src="imgs/Labenu-logo.png" alt="logo da Labenu" class="instituicoes"></img>
+                    <img src="imgs/cefet-logo.png" alt="logo do CEFET/RJ" class="instituicoes"></img>
+                    <img src="imgs/ufrj-logo.png" alt="logo da UFRJ" class="instituicoes"></img>
+                    <img src="imgs/petrobras-logo.png" alt="logo da Universidade Petrobras" class="instituicoes"></img>
+                </div>
                 <ul>
-                    <li>Labenu - Curso de formação Dev FullStack (2021)</li>
-                    <li>CEFET/RJ - Curso de Técnico em Administração (2021 - presente)</li>
-                    <li>UFRJ - Graduação em Engenharia Química (2011 - presente)</li>
-                    <li>Universidade Petrobras - Curso de Técnico em Operações Industriais (2014-2015)</li>
-                    <li>CEFET/RJ - Curso de Técnico em Eletrotécnica (2008-2010)</li>
+                    <li>Labenu - Curso Dev FullStack (atual)</li><br>
+                    <li>CEFET/RJ - Curso Técnico em Administração (atual)</li><br>
+                    <li>UFRJ - Graduação em Engenharia Química (atual)</li><br>
+                    <li>Universidade Petrobras - Curso Técnico em Operações Industriais</li><br>
+                    <li>CEFET/RJ - Curso Técnico em Eletrotécnica</li>
                 </ul>
             </div>
             <div class="bloco-lateral2">
-                <p>Experiências profissionais</p><br>
+                <p>EXPERIÊNCIAS PROFISSIONAIS</p><br>
+                <div>
+                    <img src="imgs/sandech-logo.png" alt="logo da Sandech" class="instituicoes"></img>
+                    <img src="imgs/petrobras-logo.png" alt="logo da Petrobras" class="instituicoes"></img>
+                    <img src="imgs/chemtech-logo.png" alt="logo da Chemtech" class="instituicoes"></img>
+                </div>
                 <ul>
-                    <li>Estagiário de Operações - Sandech S.A. (2018-2019)</li>
-                    <li>Operador Industrial - Petrobras S.A. (2014-2017)</li>
-                    <li>Estagiário Desenhista Cadista - Chemtech S.A.(2010-2011)</li>
+                    <li>Estagiário de Operações - Sandech S.A.</li><br>
+                    <li>Operador Industrial - Petrobras S.A.</li><br>
+                    <li>Estagiário Desenhista Cadista - Chemtech S.A.</li>
                 </ul>
             </div>
+            <a href="index.html" class="botao-subir">Subir</a>
         </section>
 
         <section id="secao2">
-            <p><br>Projetos Realizados</p>
+            <p><br>PROJETOS REALIZADOS</p>
             <div>
                 <a href="https://projetoseletivolabenu.brunosantos28.repl.co" class="bloco-projeto1" target="_blank">
-                    Projeto Processo seletivo labenu
+                    Projeto seletivo labenu
+                    <div>
+                        <img src="imgs/foto-projeto-seletivo.png" alt="foto projeto Labenu"
+                            class="imagens-projetos"></img>
+                    </div>
+                    <p>Clique para acessar!</p>
                 </a>
                 <a href="../sistema-loja/index.html" class="bloco-projeto2" target="_blank">
-                    Projeto Sistema de Loja
+                    Loja Virtual
+                    <div>
+                        <img src="imgs/loja-virtual.png" alt="foto Loja Virtual" class="imagens-projetos"></img>
+                    </div>
+                    <p>Clique para acessar!</p>
                 </a>
                 <a href="../bugfixes/exercicio-aula6/home.html" class="bloco-projeto3" target="_blank">
-                    Projeto Ajustes de Site
+                    Bugfixes
+                    <div>
+                        <img src="imgs/foto-bugfixes.png" alt="foto Bugfixes" class="imagens-projetos"></img>
+                    </div>
+                    <p>Clique para acessar!</p>
                 </a>
             </div>
+            <a href="index.html" class="botao-subir">Subir</a>
         </section>
 
         <section id="secao3">
-            <p><br>Minhas habilidades</p>
+            <p><br>HABILIDADES</p>
             <div class="bloco-lateral1">
-                <p>Skills</p><br>
+                <p>Hard Skills</p><br>
                 <ul>
-                    <li>Inglês Intermediário</li>
-                    <li>Conhecimentos básicos em HTML, CSS e JS</li>
+                    <li>Inglês Intermediário: boa leitura, e razoável escrita e conversação; </li><br>
+                    <li>HTML, CSS e JS: conhecimentos básicos;</li>
                 </ul>
             </div>
             <div class="bloco-lateral2">
-                <p>Comportamentais</p><br>
+                <p>Soft Skills</p><br>
                 <ul>
-                    <li>Versatilidade</li>
-                    <li>Dinâmica de grupo sólida</li>
-                    <li>Determinação</li>
+                    <li>Considero-me uma pessoa versátil e adaptativa, o que é um fator muito importante para a dinâmica
+                        veloz do mundo atual.</li><br>
+                    <li>Durante minhas experiências profissionais desenvolvi o gosto e a percepção pelo trabalho
+                        coletivo, que nos dias atuais é ferramenta essencial para o pleno desenvolvimento dos serviços
+                        de forma eficiente.</li><br>
+                    <li>Tenho uma natureza comunicativa, sendo alguém que interage facilmente em diversos ambientes.
+                    </li><br>
+                    <li>Sou alguém de determinação sólida, visto que quando me coloco em algo, me dedico até os meus
+                        limites, sempre tentando superá-los.</li>
                 </ul>
             </div>
+            <a href="index.html" class="botao-subir">Subir</a>
         </section>
     </main>
 
     <footer>
         <p>Venham se conectar!!</p>
-        <a href="https://br.linkedin.com"><img src="imgs/linkedin.png" alt="lnkedIn BS" class="redes-sociais"></img></a>
-        <a href="https://www.instagram.com"><img src="imgs/instagram.jpg" alt="instagram BS"
+        <a href="https://www.linkedin.com/in/bruno-santos-132aba16a/"><img src="imgs/linkedin-logo.png" alt="lnkedIn BS"
                 class="redes-sociais"></img></a>
-        <a href="https://www.facebook.com"><img src="imgs/facebook.png" alt="facebook BS"
+        <a href="https://www.instagram.com"><img src="imgs/instagram-logo.jpg" alt="instagram BS"
+                class="redes-sociais"></img></a>
+        <a href="https://www.facebook.com/profile.php?id=100011960251384"><img src="imgs/facebook-logo.png"
+                alt="facebook BS" class="redes-sociais"></img></a>
+        <a href="https://github.com/BrunoSilva28"><img src="imgs/github-logo.png" alt="facebook BS"
                 class="redes-sociais"></img></a>
     </footer>
 </body>
