adicionei links dos outros projetos feitos

--- a/semana1/portfolio/index.html
+++ b/semana1/portfolio/index.html
@@ -78,14 +78,14 @@
                     </div>
                     <p>Clique para acessar!</p>
                 </a>
-                <a href="../sistema-loja/index.html" class="bloco-projeto2" target="_blank">
+                <a href="http://tight-slip.surge.sh/index.html" class="bloco-projeto2" target="_blank">
                     Loja Virtual
                     <div>
                         <img src="imgs/loja-virtual.png" alt="foto Loja Virtual" class="imagens-projetos"></img>
                     </div>
                     <p>Clique para acessar!</p>
                 </a>
-                <a href="../bugfixes/exercicio-aula6/home.html" class="bloco-projeto3" target="_blank">
+                <a href="http://aloof-railway.surge.sh" class="bloco-projeto3" target="_blank">
                     Bugfixes
                     <div>
                         <img src="imgs/foto-bugfixes.png" alt="foto Bugfixes" class="imagens-projetos"></img>
