finalizado projeto, sem responsividade funcional

--- a/semana23/brainnco-project/public/index.html
+++ b/semana23/brainnco-project/public/index.html
@@ -32,7 +32,9 @@
       padding: 0;
       width: 100%;
       min-height: 100vh;
-      background-color: lightgrey;
+      background-color: #EFEFEF;
+      font-family: 'Montserrat', sans-serif; 
+      font-weight: 600;
     }
   </style>
 </head>
